load images by file-loader

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <H1>HELLO WORLD</H1>
+    <img src="<%= require('../images/icon.png') %>">
+    <img src="<%= require('../images/thumbnail.jpg') %>">
 </body>
 </html>
