ES6, React, Vue

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -4,6 +4,8 @@ block locals
     - var title = 'Home';
 
 block content
-    h1 Hello,World!
+    h1 HOME!!!
+    div#react-root
+    div#vue-root
     img(src="../images/icon.png")
     img(src="../images/thumbnail.jpg") 
