--- a/src/templates/_menu.pug
+++ b/src/templates/_menu.pug
@@ -1,3 +1,4 @@
 div
-    a(href="./index.html") INDEX
-    a(href="./access.html") ACCESS
+    a(href="/index.html") INDEX
+    a(href="/access.html") ACCESS
+    a(href="/members/taro.html") TARO
