--- a/src/templates/_menu.pug
+++ b/src/templates/_menu.pug
@@ -1,4 +1,7 @@
-div
-    a(href="/index.html") INDEX
-    a(href="/access.html") ACCESS
-    a(href="/members/taro.html") TARO
+.menu
+    .menu__item
+        a(href="/index.html") INDEX
+    .menu__item    
+        a(href="/access.html") ACCESS
+    .menu__item
+        a(href="/members/taro.html") TARO
